# crabmander

./: .envrc  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  bacon.toml
.config/: config.json5
.github/workflows/: cd.yml
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  errors.rs  main.rs  ops.rs  palette.rs  recent_dirs.rs  tui.rs
src/components/: context_menu.rs  dialog.rs  func_bar.rs  git_view.rs  panel.rs
