[package]
name = "crabmander"
version = "1.0.0"
edition = "2024"
description = "A twin-pane TUI file manager written in Rust using Ratatui."
authors = ["Tommie Nygren <tommie.nygren@gmail.com>"]
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.15.22"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
git2 = "0.20.4"
human-panic = "2.0.2"
json5 = "1.3.1"
lazy_static = "1.5.0"
libc = "0.2.161"
pretty_assertions = "1.4.1"
ratatui = { version = "0.30.0", features = ["serde", "macros"] }
ratatui-textarea = "0.9.1"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
signal-hook = "0.4.4"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
opaline = "0.4.0"
notify = { version = "7", features = ["macos_kqueue"] }
zip = "2"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = "0.1"
zstd = "0.13"

[build-dependencies]
anyhow = "1.0.90"
vergen-gix = { version = "9.1.0", features = ["build", "cargo"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
